Updates from Overleaf

--- a/papers/actor-based-large-neighborhood-search/refs.bib
+++ b/papers/actor-based-large-neighborhood-search/refs.bib
@@ -1,3 +1,35 @@
+@article{pisinger2007general,
+  title={A general heuristic for vehicle routing problems},
+  author={Pisinger, David and Ropke, Stefan},
+  journal={Computers \& operations research},
+  volume={34},
+  number={8},
+  pages={2403--2435},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@inproceedings{shaw1998using,
+  title={Using constraint programming and local search methods to solve vehicle routing problems},
+  author={Shaw, Paul},
+  booktitle={International conference on principles and practice of constraint programming},
+  pages={417--431},
+  year={1998},
+  organization={Springer}
+}
+
+@article{do2007constrained,
+  title={The constrained compartmentalised knapsack problem},
+  author={do Prado Marques, Fabiano and Arenales, Marcos Nereu},
+  journal={Computers \& operations research},
+  volume={34},
+  number={7},
+  pages={2109--2129},
+  year={2007},
+  publisher={Elsevier}
+}
+
+
 @article{ehrgott2002multiple,
 	title = {Multiple criteria optimization: state of the art annotated
 	         bibliographic surveys},
