--- a/memos/total-energies/2024-12-13-brian-and-valentin/main.tex
+++ b/memos/total-energies/2024-12-13-brian-and-valentin/main.tex
@@ -33,28 +33,13 @@
 
 \cfoot{\thepage}
 
-% \titleformat{\section}{\normalfont\Large\bfseries}{}{0em}{}
-% \title{
-% 	Project Plan: Application for External Stay at Decision Brain
-% }
-
-
 \begin{document}
 	\section{Introduction}
-	Hello Brian and Valentin
+	Hello Brian and Valentin,
 
-	!!!
+	I have created a memo for the project to help get us all in sync.
 	\input{status_update.tex}
 	\input{problems_and_issues.tex}
-	% \input{./summary.tex}
-	% \input{./project-introduction.tex}
-	% \input{./goals-of-external-stay.tex}
-	% \input{./personal.tex}
-	% \input{./roadmap.tex}
-	% \input{./technical.tex}
-	% \input{./academic.tex}
-	% \input{../../decision-brain/appendix.tex}
-	% \input{./../../curriculum-vitae.tex}
 	\input{tecnical_appendix.tex}
 	\bibliographystyle{plainnat}
 	\bibliography{../../papers/actor-based-large-neighborhood-search/refs}
