--- a/memos/total-energies/2024-12-13-brian-and-valentin/problems_and_issues.tex
+++ b/memos/total-energies/2024-12-13-brian-and-valentin/problems_and_issues.tex
@@ -2,17 +2,30 @@
 
 
 \begin{itemize}
-	\item Lack of communication skills
+	\item "Customer" support
 	\item Funding of the project 
 	\item Frontend development
-	\item "Customer" support
 \end{itemize}
 
-\subsection{Lack of Communication Skills}
-Throughout the project I am sorry for not being more responsive 
-and giving regular status updates. I think that because I have 
-often waited so long to provide status updates the project tends
-to shift a little before a make up for it.
+\subsection{"Customer" Support}
+The success of this project relies heavily on the support from you two. I
+made the deal with Sebastien Perrier while he was still in Esbjerg that
+if I made all the backend code where you two would like the code then his
+team would supply the manpower needed to develop the frontends. 
 
+Now the problem is that if I cannot convince the two of you it becomes 
+really difficult to making this work. 
 
-\subsection{}
+\subsection{Funding of the Project}
+The funding for the project is running out so I will not be able to 
+come to Esbjerg as often as I have been previously. I will try to 
+draft a proposal for a project after I come home from Decision Brain,
+they have a lot of experience with developing systems like the one that
+we are developing together. 
+
+\subsection{Frontend Development}
+A correct implementation of the project will require a lot of frontend 
+development work, which I do not have time to do alone. I am not use 
+how to best solve this issue, especially as I lack the required 
+experience to actually know what to ask for. There is also the 
+issue that the backend code changes quickly. 
