--- a/papers/actor-based-large-neighborhood-search/tex/solution_method.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/solution_method.tex
@@ -66,4 +66,4 @@ solution is perturbed. Notice that:
 
 The AbLNS algorithm will continuously run either optimizing the current plan or updating the plan 
 with new external input. Since the effects of a message is considered in every iteration, changing 
-conditions will immediately get acted upon. Since a fast response is paramount, exact optimization algorithms are deemed un-s 
+conditions will immediately get acted upon. Since a fast response is paramount, exact optimization algorithms are deemed unworkable.
